deploy/k8s/1-namespace.yaml
apiVersion: v1
kind: Namespace
metadata:
  name: agentsmith
  labels:
    app.kubernetes.io/name: agentsmith
